<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingActivity"
    android:id="@+id/main_container">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/colorSetting"
                android:id="@+id/btn_back"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_setting"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_unit_selector"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#fff"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:visibility="invisible"
                app:cardCornerRadius="6dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toTopOf="@id/container_unit"
                app:layout_constraintStart_toStartOf="@id/container_unit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_metric"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/txt_metric"
                        android:textColor="@color/colorSetting"
                        android:padding="14dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:selectableItemBackground"/>

                    <TextView
                        android:id="@+id/txt_imperial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/txt_imperial"
                        android:textColor="@color/colorSetting"
                        android:padding="15dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:selectableItemBackground"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/container_unit"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_unit"
                        android:textColor="#000"/>

                    <TextView
                        android:id="@+id/txt_selected_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/txt_metric"
                        android:textColor="@color/colorSetting"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/grey_underline_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/container_unit"
                android:id="@+id/container_reorder"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_reorder"
                        android:textColor="#000"/>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/grey_underline_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/container_reorder"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/container_about"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/txt_about"
                        android:textColor="#000"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/grey_underline_bg"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>